feat: add dark mode

--- a/lang/de.json
+++ b/lang/de.json
@@ -2,6 +2,8 @@
   "page.index.title": "Durchsuchen",
   "page.index.description": "Entdecke Dinge dieser Welt",
   "page.index.search": "Suche",
+  "page.index.all": "Alle",
+  "page.index.seeAll": "Alle anzeigen",
   "page.categories.title": "Kategorien",
   "page.categories.description": "Tausende von Artikeln in jeder Kategorie",
   "page.bookmarks.title": "Lesezeichen",
