--- a/lang/es.json
+++ b/lang/es.json
@@ -2,6 +2,8 @@
   "page.index.title": "Explorar",
   "page.index.description": "Descubra cosas de este mundo",
   "page.index.search": "Buscar",
+  "page.index.all": "Todo",
+  "page.index.seeAll": "Ver todo",
   "page.categories.title": "Categorías",
   "page.categories.description": "Miles de artículos en cada categoría",
   "page.bookmarks.title": "Marcadores",
