--- a/lang/pl.json
+++ b/lang/pl.json
@@ -2,6 +2,8 @@
   "page.index.title": "Przeglądaj",
   "page.index.description": "Odkryj rzeczy tego świata",
   "page.index.search": "Szukaj",
+  "page.index.all": "Wszystko",
+  "page.index.seeAll": "Zobacz wszystko",
   "page.categories.title": "Kategorie",
   "page.categories.description": "Tysiące artykułów w każdej kategorii",
   "page.bookmarks.title": "Zakładki",
